<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="@dimen/_242sdp"
    android:layout_height="@dimen/_266sdp"
    android:background="@drawable/img_bg_dialog_update"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvUpdate"
        android:layout_width="@dimen/_144sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:background="@drawable/bg_button_rate"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/update_now"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/des_update"
        android:textColor="#868A90"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/tvUpdate" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/title_update"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvDes" />

</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>