<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data />
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_onboarding"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_work"
            android:textSize="@dimen/size_title"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_onboarding"
        android:orientation="vertical"
        android:padding="@dimen/_14sdp"
        android:layout_margin="@dimen/_8sdp">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/scan_tip"
            android:textSize="@dimen/size_detail"
            android:textColor="@android:color/black"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAllCaps="true"
        android:text="@string/let_start"
        android:textSize="@dimen/size_description"
        android:textColor="@color/greenTick"
        android:layout_marginBottom="@dimen/_2sdp"
        android:padding="@dimen/_4sdp" />

</LinearLayout>


</layout>