<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rate_dialog">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivIconRate"
        android:layout_width="@dimen/_84sdp"
        android:layout_height="@dimen/_84sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/img_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/title_rate"
        android:textColor="#1A1E31"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIconRate" />

    <TextView
        android:id="@+id/tvDesRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/body_rate"
        android:textColor="#494D54"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleRate" />

    <LinearLayout
        android:id="@+id/llRate"
        android:layout_width="@dimen/_152sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesRate">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rate1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_rate_star_off" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rate2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_rate_star_off" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rate3"
            android:layout_width="0dp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_rate_star_off" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rate4"
            android:layout_width="0dp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_rate_star_off" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rate5"
            android:layout_width="0dp"
            android:layout_height="@dimen/_28sdp"
            android:layout_weight="1"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_rate_star_off_5" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_button_rate"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/rate"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="144:40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llRate" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/_5sdp"
        android:text="@string/may_be_later"
        android:textColor="#494D54"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRate" />

</androidx.constraintlayout.widget.ConstraintLayout>
