<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_main_color"
        tools:context=".ui.activity.ScanFileActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/audio_recovery"
                android:textColor="@color/black"
                android:textSize="@dimen/size_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="0dp"
                android:src="@drawable/icon_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layoutScan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clProgress"
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="@dimen/_110sdp">

                        <ImageView
                            android:id="@+id/circularProgress"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_round"
                            android:contentDescription="@null"
                            app:layout_constraintBottom_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <ImageView
                            android:id="@+id/imgProgress"
                            android:layout_width="@dimen/_47sdp"
                            android:layout_height="@dimen/_47sdp"
                            android:contentDescription="@null"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <RelativeLayout
                        android:layout_width="@dimen/_170sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_14sdp">

                        <RelativeLayout
                            android:id="@+id/layoutProgress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <com.skydoves.progressview.ProgressView
                                android:id="@+id/progressViewScan"
                                android:layout_width="@dimen/_170sdp"
                                android:layout_height="@dimen/_40sdp"
                                android:layout_centerInParent="true"
                                app:progressView_autoAnimate="false"
                                app:progressView_colorBackground="@color/md_grey_500"
                                app:progressView_colorGradientEnd="@color/colorProgressEndVideo"
                                app:progressView_colorGradientStart="@color/colorProgressStartVideo"
                                app:progressView_labelColorInner="@color/transparent"
                                app:progressView_labelColorOuter="@color/transparent"
                                app:progressView_labelSize="0sp"
                                app:progressView_max="100"
                                app:progressView_min="0"
                                app:progressView_progressFromPrevious="true"
                                app:progressView_radius="@dimen/_23sdp" />

                            <TextView
                                android:id="@+id/txtProgress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:textColor="@color/white"
                                android:textSize="15sp" />
                        </RelativeLayout>


                        <TextView
                            android:id="@+id/txtButtonScan"
                            android:layout_width="@dimen/_170sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_centerInParent="true"
                            android:background="@drawable/bg_button_scan"
                            android:gravity="center"
                            android:text="@string/scan_videos"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/size_description"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/txtStatusScan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:gravity="center_horizontal"
                        android:text="@string/tap_start_scan"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtFolderScan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/size_description"
                        android:visibility="invisible" />


                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:background="@drawable/background_border_cancel"
                        android:fontFamily="@font/roboto_medium"
                        android:paddingHorizontal="@dimen/_30sdp"
                        android:text="@string/cancel_scan"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_description"
                        android:visibility="gone" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>